--- a/src/my-component/Button.module.scss
+++ b/src/my-component/Button.module.scss
@@ -12,6 +12,18 @@ $container-background-color-03__hover: #ff2b2b;
 $container-background-color-04__hover: #efc11d;
 $container-background-color-05__hover: transparent;
 
+$icon-color-01: #38ab80;
+$icon-color-02: #525252;
+$icon-color-03: #ef1d1d;
+$icon-color-04: #efc11d;
+$icon-color-05: transparent;
+
+$icon-color-01__hover: #3fc493;
+$icon-color-02__hover: #525252;
+$icon-color-03__hover: #ff2b2b;
+$icon-color-04__hover: #efc11d;
+$icon-color-05__hover: transparent;
+
 @mixin container-size-01() {
   width: 11.5625rem;
   height: 3.125rem;
@@ -19,7 +31,7 @@ $container-background-color-05__hover: transparent;
 
 @mixin container-size-02() {
   width: 9.8856rem;
-  height: 2.6719rem;
+  height: 2.5rem;
 }
 
 @mixin container-size-03() {
@@ -38,82 +50,130 @@ $container-background-color-05__hover: transparent;
 }
 
 @mixin container-font-size-01() {
-  > button {
+  >button {
     @include Roboto-B14();
   }
 }
+
 @mixin container-font-size-02() {
-  > button {
+  >button {
     @include Roboto-B15();
   }
 }
+
 @mixin container-font-size-03() {
-  > button {
+  >button {
     @include Roboto-B16();
   }
 }
+
 @mixin container-font-size-04() {
-  > button {
+  >button {
     @include Roboto-B17();
   }
 }
+
 @mixin container-font-size-05() {
-  > button {
+  >button {
     @include Roboto-B18();
   }
 }
 
 @mixin button-color-01-02-03-04() {
-  > button {
+  >button {
     color: white;
   }
+
   &:hover {
-    > button {
-    }
+    >button {}
   }
 }
 
 @mixin button-color-05() {
-  > button {
+  >button {
     color: black;
   }
+
   &:hover {
-    > button {
+    >button {
       color: rgb(88, 88, 88);
     }
   }
 }
 
-.container {
+.container-without-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blue;
 
   cursor: pointer;
   border-radius: 5px;
-  transition: 0.2s;
-  > i {
-    // color: white;
-    // width: 12px;
-    // height: 12px;
-    --ggs: 1;
-    font-size: 0.1;
-  }
+  // transition: 0.2s;
+
   button {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    transition: 0.2s;
+    // transition: 0.2s;
   }
 
-  > svg path {
-    fill: white;
+  &:hover {}
+}
+
+.container-with-icon {
+  display: grid;
+  grid-template-columns: 25% 75%;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.2s;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+
+  display: flex;
+
+
+  button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    // transition: 0.2s;
+    justify-content: center;
+    padding: 0px;
   }
 
   &:hover {
-    > svg path {
-      fill: black;
+    >div:nth-child(1) {
+      background-color: $icon-color-01__hover;
+      border-top-right-radius: 50%;
+      border-bottom-right-radius: 50%;
+    }
+  }
+
+  >div:nth-child(1) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    justify-self: center;
+    height: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    transition: 0.2s;
+
+    >svg {
+      width: 17.5px;
+      height: 17.5px;
+    }
+
+    >svg path {
+      fill: white;
+    }
+
+    &:hover {
+      >svg path {}
     }
   }
 }
@@ -140,26 +200,6 @@ $container-background-color-05__hover: transparent;
 
 .size5 {
   @include container-size-05();
-  @include container-font-size-05();
-}
-
-.font-size1 {
-  @include container-font-size-01();
-}
-
-.font-size2 {
-  @include container-font-size-02();
-}
-
-.font-size3 {
-  @include container-font-size-03();
-}
-
-.font-size4 {
-  @include container-font-size-04();
-}
-
-.font-size5 {
   @include container-font-size-05();
 }
 
@@ -202,7 +242,11 @@ $container-background-color-05__hover: transparent;
 .none {
   background-color: $container-background-color-05;
   @include button-color-05();
+
   &:hover {
     background-color: $container-background-color-05__hover;
   }
 }
+
+
+// .icon-container {}
