--- a/src/my-component/CheckboxInput.module.scss
+++ b/src/my-component/CheckboxInput.module.scss
@@ -5,13 +5,12 @@
   justify-content: center;
   align-self: center;
   align-items: center;
-  width: 1.5625rem !important;
-  height: 1.5625rem !important;
+  width: 20px !important;
+  height: 20px !important;
   border: 1px solid #dedede;
   box-sizing: border-box;
   border-radius: 5px;
   margin-right: 0.5rem;
-  cursor: pointer;
 
   > img {
     width: 0.938rem;
@@ -21,6 +20,8 @@
 
 .container {
   display: flex;
+  cursor: pointer;
+  width: fit-content;
   p {
     @include Roboto-R16();
     align-self: center;
