--- a/src/my-component/Input.module.scss
+++ b/src/my-component/Input.module.scss
@@ -3,7 +3,6 @@
 .big-container {
   display: flex;
   flex-direction: column;
-  flex: 1;
   > p {
     padding: 0px;
     margin: 0px;
@@ -19,7 +18,7 @@
   flex: 1;
   background-color: rgb(181, 179, 182);
   > svg path {
-    fill: black;
+    fill: #686868;
   }
   max-height: 40px;
 
@@ -51,9 +50,17 @@
   padding: 0px;
   padding-left: 10px;
   height: 40px;
+  &::placeholder {
+    @include Roboto-R16();
+    color: #8e8e8e;
+    text-align: left;
+    transition: 0.1s;
+  }
   &:focus-within {
     outline: none;
-
+    &::placeholder {
+      color: white;
+    }
     > input {
       outline: none;
     }
