--- a/src/assets/fonts.module.scss
+++ b/src/assets/fonts.module.scss
@@ -1,3 +1,6 @@
 @import './fonts-roboto-r.module.scss';
 @import './fonts-roboto-m.module.scss';
 @import './fonts-roboto-b.module.scss';
+@import './fonts-raleway-r.module.scss';
+@import './fonts-raleway-m.module.scss';
+@import './fonts-raleway-b.module.scss';
