--- a/src/assets/fonts-raleway-b.module.scss
+++ b/src/assets/fonts-raleway-b.module.scss
@@ -1,109 +1,109 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@mixin Roboto-M {
+@mixin Raleway-B {
   display: flex;
   align-items: center;
   text-align: center;
   color: #FFFFFF;
-  font-family: 'Roboto';
+  font-family: "Raleway";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   margin: 0px;
   padding: 0px;
 }
 
-@mixin Roboto-M1 {
+@mixin Raleway-B1 {
   font-size: 3.125rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M2 {
+@mixin Raleway-B2 {
   font-size: 2.9688rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M3 {
+@mixin Raleway-B3 {
   font-size: 2.8125rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M4 {
+@mixin Raleway-B4 {
   font-size: 2.6563rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M5 {
+@mixin Raleway-B5 {
   font-size: 2.5rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M6 {
+@mixin Raleway-B6 {
   font-size: 2.3438rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M7 {
+@mixin Raleway-B7 {
   font-size: 2.1875rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M8 {
+@mixin Raleway-B8 {
   font-size: 2.0313rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M9 {
+@mixin Raleway-B9 {
   font-size: 1.875rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M10 {
+@mixin Raleway-B10 {
   font-size: 1.7188rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M11 {
+@mixin Raleway-B11 {
   font-size: 1.5625rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M12 {
+@mixin Raleway-B12 {
   font-size: 1.4063rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M13 {
+@mixin Raleway-B13 {
   font-size: 1.25rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M14 {
+@mixin Raleway-B14 {
   font-size: 1.0938rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M15 {
+@mixin Raleway-B15 {
   font-size: 0.9375rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M16 {
+@mixin Raleway-B16 {
   font-size: 0.7813rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M17 {
+@mixin Raleway-B17 {
   font-size: 0.625rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M18 {
+@mixin Raleway-B18 {
   font-size: 0.4688rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
 
-@mixin Roboto-M19 {
+@mixin Raleway-B19 {
   font-size: 0.3125rem;
-  @include Roboto-M();
+  @include Raleway-B();
 }
