--- a/src/assets/fonts-raleway-r.module.scss
+++ b/src/assets/fonts-raleway-r.module.scss
@@ -1,109 +1,110 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@mixin Roboto-M {
+@mixin Raleway-R {
   display: flex;
   align-items: center;
   text-align: center;
   color: #FFFFFF;
-  font-family: 'Roboto';
+  font-family: "Raleway";
   font-style: normal;
-  font-weight: 500;
-  margin: 0px;
-  padding: 0px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  color: black;
 }
 
-@mixin Roboto-M1 {
+@mixin Raleway-R1 {
   font-size: 3.125rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M2 {
+@mixin Raleway-R2 {
   font-size: 2.9688rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M3 {
+@mixin Raleway-R3 {
   font-size: 2.8125rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M4 {
+@mixin Raleway-R4 {
   font-size: 2.6563rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M5 {
+@mixin Raleway-R5 {
   font-size: 2.5rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M6 {
+@mixin Raleway-R6 {
   font-size: 2.3438rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M7 {
+@mixin Raleway-R7 {
   font-size: 2.1875rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M8 {
+@mixin Raleway-R8 {
   font-size: 2.0313rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M9 {
+@mixin Raleway-R9 {
   font-size: 1.875rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M10 {
+@mixin Raleway-R10 {
   font-size: 1.7188rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M11 {
+@mixin Raleway-R11 {
   font-size: 1.5625rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M12 {
+@mixin Raleway-R12 {
   font-size: 1.4063rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M13 {
+@mixin Raleway-R13 {
   font-size: 1.25rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M14 {
+@mixin Raleway-R14 {
   font-size: 1.0938rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M15 {
+@mixin Raleway-R15 {
   font-size: 0.9375rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M16 {
+@mixin Raleway-R16 {
   font-size: 0.7813rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M17 {
+@mixin Raleway-R17 {
   font-size: 0.625rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M18 {
+@mixin Raleway-R18 {
   font-size: 0.4688rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
 
-@mixin Roboto-M19 {
+@mixin Raleway-R19 {
   font-size: 0.3125rem;
-  @include Roboto-M();
+  @include Raleway-R();
 }
