--- a/src/assets/fonts-roboto-b.module.scss
+++ b/src/assets/fonts-roboto-b.module.scss
@@ -1,106 +1,108 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@mixin B {
+@mixin Roboto-B {
   display: flex;
   align-items: center;
   text-align: center;
   color: #FFFFFF;
-  font-family: Raleway;
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
+  margin: 0px;
+  padding: 0px;
 }
 
 @mixin Roboto-B1 {
-  font-size: 50px;
-  @include B();
+  font-size: 3.125rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B2 {
-  font-size: 47.5px;
-  @include B();
+  font-size: 2.9688rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B3 {
-  font-size: 45px;
-  @include B();
+  font-size: 2.8125rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B4 {
-  font-size: 42.5px;
-  @include B();
+  font-size: 2.6563rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B5 {
-  font-size: 40px;
-  @include B();
+  font-size: 2.5rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B6 {
-  font-size: 37.5px;
-  @include B();
+  font-size: 2.3438rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B7 {
-  font-size: 35px;
-  @include B();
+  font-size: 2.1875rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B8 {
-  font-size: 32.5px;
-  @include B();
+  font-size: 2.0313rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B9 {
-  font-size: 30px;
-  @include B();
+  font-size: 1.875rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B10 {
-  font-size: 27.5px;
-  @include B();
+  font-size: 1.7188rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B11 {
-  font-size: 25px;
-  @include B();
+  font-size: 1.5625rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B12 {
-  font-size: 22.5px;
-  @include B();
+  font-size: 1.4063rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B13 {
-  font-size: 20px;
-  @include B();
+  font-size: 1.25rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B14 {
-  font-size: 17.5px;
-  @include B();
+  font-size: 1.0938rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B15 {
-  font-size: 15px;
-  @include B();
+  font-size: 0.9375rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B16 {
-  font-size: 12.5px;
-  @include B();
+  font-size: 0.7813rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B17 {
-  font-size: 10px;
-  @include B();
+  font-size: 0.625rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B18 {
-  font-size: 7.5px;
-  @include B();
+  font-size: 0.4688rem;
+  @include Roboto-B();
 }
 
 @mixin Roboto-B19 {
-  font-size: 5px;
-  @include B();
+  font-size: 0.3125rem;
+  @include Roboto-B();
 }
