--- a/src/assets/fonts-roboto-r.module.scss
+++ b/src/assets/fonts-roboto-r.module.scss
@@ -1,4 +1,7 @@
-@mixin R1 {
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@mixin Roboto-R {
   display: flex;
   align-items: center;
   text-align: center;
@@ -6,99 +9,102 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
+  color: black;
 }
 
 @mixin Roboto-R1 {
-  font-size: 50px;
-  @include R1();
+  font-size: 3.125rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R2 {
-  font-size: 47.5px;
-  @include R1();
+  font-size: 2.9688rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R3 {
-  font-size: 45px;
-  @include R1();
+  font-size: 2.8125rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R4 {
-  font-size: 42.5px;
-  @include R1();
+  font-size: 2.6563rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R5 {
-  font-size: 40px;
-  @include R1();
+  font-size: 2.5rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R6 {
-  font-size: 37.5px;
-  @include R1();
+  font-size: 2.3438rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R7 {
-  font-size: 35px;
-  @include R1();
+  font-size: 2.1875rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R8 {
-  font-size: 32.5px;
-  @include R1();
+  font-size: 2.0313rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R9 {
-  font-size: 30px;
-  @include R1();
+  font-size: 1.875rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R10 {
-  font-size: 27.5px;
-  @include R1();
+  font-size: 1.7188rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R11 {
-  font-size: 25px;
-  @include R1();
+  font-size: 1.5625rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R12 {
-  font-size: 22.5px;
-  @include R1();
+  font-size: 1.4063rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R13 {
-  font-size: 20px;
-  @include R1();
+  font-size: 1.25rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R14 {
-  font-size: 17.5px;
-  @include R1();
+  font-size: 1.0938rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R15 {
-  font-size: 15px;
-  @include R1();
+  font-size: 0.9375rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R16 {
-  font-size: 12.5px;
-  @include R1();
+  font-size: 0.7813rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R17 {
-  font-size: 10px;
-  @include R1();
+  font-size: 0.625rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R18 {
-  font-size: 7.5px;
-  @include R1();
+  font-size: 0.4688rem;
+  @include Roboto-R();
 }
 
 @mixin Roboto-R19 {
-  font-size: 5px;
-  @include R1();
+  font-size: 0.3125rem;
+  @include Roboto-R();
 }
