--- a/src/my-component/Button.module.scss
+++ b/src/my-component/Button.module.scss
@@ -85,8 +85,10 @@ $icon-color-05__hover: transparent;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   // transition: 0.2s;
+  width: 100%;
+  height: 100%;
 
   button {
     background-color: transparent;
@@ -96,27 +98,28 @@ $icon-color-05__hover: transparent;
   }
 }
 
+.container-with-only-icon {
+  display: flex;
+}
+
 .container-with-icon {
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 25% 65%;
   justify-content: center;
   align-items: center;
 
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   transition: 0.2s;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-
-  display: flex;
-
+  border-top-left-radius: 0.3125rem;
+  border-bottom-left-radius: 0.3125rem;
+  column-gap: 1rem;
 
   button {
     background-color: transparent;
     border: none;
     cursor: pointer;
     // transition: 0.2s;
-    justify-content: center;
     padding: 0px;
   }
 
@@ -131,17 +134,19 @@ $icon-color-05__hover: transparent;
   >div:nth-child(1) {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     align-self: center;
-    justify-self: center;
+    justify-self: flex-end;
     height: 100%;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 0.3125rem;
+    border-bottom-left-radius: 0.3125rem;
     transition: 0.2s;
+    width: 100%;
 
     >svg {
-      width: 17.5px;
-      height: 17.5px;
+      width: 1.0938rem;
+      height: 1.0938rem;
+
     }
 
     >svg path {
@@ -186,6 +191,10 @@ $icon-color-05__hover: transparent;
 .secondary {
   background-color: $container-background-color-02;
 
+  >button {
+    color: white;
+  }
+
   &:hover {
     background-color: $container-background-color-02__hover;
   }
@@ -209,6 +218,10 @@ $icon-color-05__hover: transparent;
 
 .none {
   background-color: $container-background-color-05;
+
+  >button {
+    color: rgb(82, 82, 82);
+  }
 
   &:hover {
     background-color: $container-background-color-05__hover;
