--- a/src/my-component/CheckboxInput.module.scss
+++ b/src/my-component/CheckboxInput.module.scss
@@ -5,14 +5,14 @@
   justify-content: center;
   align-self: center;
   align-items: center;
-  width: 20px !important;
-  height: 20px !important;
+  width: 1.25rem !important;
+  height: 1.25rem !important;
   border: 1px solid #dedede;
   box-sizing: border-box;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   margin-right: 0.5rem;
 
-  > img {
+  >img {
     width: 0.938rem;
     height: 0.938rem;
   }
@@ -22,6 +22,7 @@
   display: flex;
   cursor: pointer;
   width: fit-content;
+
   p {
     @include Roboto-R16();
     align-self: center;
