--- a/src/my-component/Page.module.scss
+++ b/src/my-component/Page.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: grid;
-  grid-template-rows: 7.5vh 92.5vh;
+  grid-template-rows: 7.5% 92.5%;
   row-gap: 1rem;
   // margin-left: calc(200px + 4rem + 2rem);
   margin-left: 1.5rem;
@@ -12,7 +12,7 @@
   margin-right: 2rem;
   flex: 1;
 
-  > p:nth-child(1) {
+  >p:nth-child(1) {
     @include Roboto-B8();
     color: rgb(70, 70, 70);
     grid-row: 1 / 2;
@@ -28,7 +28,7 @@
   column-gap: 2rem;
   width: 100%;
 
-  > aside {
+  >aside {
     display: flex;
     flex-direction: column;
     background: #ffffff;
@@ -42,7 +42,7 @@
     // }
   }
 
-  > main {
+  >main {
     display: flex;
     flex-direction: column;
     flex: 1;
