--- a/src/assets/helpers/fonts-raleway-m.module.scss
+++ b/src/assets/helpers/fonts-raleway-m.module.scss
@@ -4,13 +4,12 @@
 @mixin Raleway-M {
   display: flex;
   align-items: center;
-  text-align: center;
-  color: #FFFFFF;
+  color: var(--custom-color1);
   font-family: "Raleway";
   font-style: normal;
   font-weight: 500;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 @mixin Raleway-M1 {
