--- a/src/assets/helpers/fonts-roboto-b.module.scss
+++ b/src/assets/helpers/fonts-roboto-b.module.scss
@@ -1,15 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 @mixin Roboto-B {
   display: flex;
   align-items: center;
-  text-align: center;
-  color: #FFFFFF;
+  color: var(--custom-color1);
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 @mixin Roboto-B1 {
