--- a/src/assets/inputs/Page.module.scss
+++ b/src/assets/inputs/Page.module.scss
@@ -1,24 +1,25 @@
-@import '../assets/fonts.module.scss';
+@import '../helpers/fonts.module.scss';
+
+
 
 .container {
   display: grid;
-  grid-template-rows: 7.5% 92.5%;
-  row-gap: 1rem;
-  // margin-left: calc(200px + 4rem + 2rem);
+  grid-template-rows: 5% 95%;
+  row-gap: .5rem;
   margin-left: 1.5rem;
   height: 100%;
-  column-gap: 1rem;
-  margin-bottom: 1rem;
   margin-right: 2rem;
   flex: 1;
 
   >p:nth-child(1) {
-    @include Roboto-B8();
-    color: rgb(70, 70, 70);
+    @include Roboto-B12();
+    color: var(--color-title-normal);
+
     grid-row: 1 / 2;
-    border-bottom: 1px solid rgb(70, 70, 70);
+    border-bottom: 1px solid var(--border-title-normal);
     margin: 0px;
     padding: 0px;
+    opacity: .9;
   }
 }
 
@@ -35,11 +36,6 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
     padding: 1.25rem 2rem;
     width: 20%;
-
-    // p {
-    //   @include Roboto-B14();
-    //   color: black;
-    // }
   }
 
   >main {
@@ -47,10 +43,5 @@
     flex-direction: column;
     flex: 1;
     width: 100%;
-
-    // p {
-    //   @include Roboto-B14();
-    //   color: black;
-    // }
   }
 }
