--- a/src/assets/inputs/FileInput.module.scss
+++ b/src/assets/inputs/FileInput.module.scss
@@ -1,36 +1,30 @@
 @import '../helpers/fonts.module.scss';
 
-
 .file-input-component {
-
-
-
 }
 
-.label-file-input {}
+.label-file-input {
+}
 
 .container-file-input {
   display: flex;
 
-
   img {
     border-radius: 4px;
-    box-shadow: 2px 2px 10px .5px black;
+    box-shadow: 2px 2px 10px 0.5px black;
     width: 15rem;
     border-radius: 4px;
 
-    &:hover {}
+    &:hover {
+    }
   }
 }
-
-
 
 .ry-root-fileinput {
   display: flex;
   flex-direction: column;
   width: 100%;
   justify-content: center;
-  margin: 1rem 0rem;
   cursor: pointer;
 }
 
@@ -42,7 +36,7 @@
 .ry-container-fileinput {
   display: flex;
   flex-direction: row;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   > button {
     min-height: 3.125rem;
     border: 1px solid var(--border-primarybutton-normal);
