--- a/src/assets/PaperA.module.scss
+++ b/src/assets/PaperA.module.scss
@@ -22,6 +22,10 @@
   padding: 1rem;
 }
 
+.margin {
+  margin: 1rem;
+}
+
 .hover {
   &:hover {
     // box-shadow: 0px 4px 20px 4px var(--paper-a-color-3);
