--- a/src/assets/inputs/CalendarInput.module.scss
+++ b/src/assets/inputs/CalendarInput.module.scss
@@ -32,6 +32,10 @@
   // border-bottom: 1px solid var(--custom-color1);
   // box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.125);
   // border-bottom: 1px solid var(--custom-color1);
+  column-gap: 1rem;
+  .select {
+    flex: 1;
+  }
 
   > svg {
     padding: 0.75rem 1.25rem;
@@ -42,7 +46,7 @@
     height: unset !important;
     // background-color: var(--custom-color2);
     > path {
-      fill: var(--fill-input-normal);
+      fill: black;
     }
   }
 }
@@ -75,7 +79,6 @@
   border-left: none;
   flex: 2;
   // border-left: 1px solid black;
-
 }
 
 .ry-container-without-image-calendarinput {
@@ -108,6 +111,99 @@
     > svg {
       border: 1px solid rgb(204, 204, 204);
       border-right: none;
+    }
+  }
+}
+
+.select {
+  // arrow
+  &:hover {
+    [class$='indicatorContainer'] {
+      color: var(--select-type-a-with-icon-color-6);
+    }
+    [class$='indicatorSeparator'] {
+      background-color: var(--select-type-a-with-icon-color-6);
+    }
+  }
+  &:focus-within {
+    [class$='indicatorContainer'] {
+      color: var(--select-type-a-with-icon-color-6);
+    }
+    [class$='indicatorSeparator'] {
+      background-color: var(--select-type-a-with-icon-color-6);
+    }
+  }
+  [class$='-control'] {
+    min-height: 3.125rem;
+    border: none;
+    background-color: var(--select-type-a-with-icon-color-1);
+    border-bottom: 1px solid var(--select-type-a-with-icon-color-2);
+    color: var(--select-type-a-with-icon-color-3);
+    box-sizing: border-box;
+    &:focus-within {
+      outline: none;
+      border: none;
+      box-shadow: unset;
+      border-bottom: 1px solid var(--select-type-a-with-icon-color-4);
+      box-sizing: border-box;
+    }
+    &:hover {
+      border-color: unset;
+      border-bottom: 1px solid var(--select-type-a-with-icon-color-4);
+      box-sizing: border-box;
+    }
+  }
+  // [class$='indicatorContainer'] {
+  //   color: var(--select-type-a-with-icon-color-5);
+  //   // &:hover {
+  //   //   color: red;
+  //   // }
+  // }
+  [class$='menu'] {
+    // background-color: red;
+    margin-left: 0.5px;
+    cursor: pointer;
+  }
+  [class$='MenuList'] {
+    // background-color: green;
+    padding-top: unset;
+    padding-bottom: unset;
+  }
+  [class$='option'] {
+    // background-color: black;
+    // padding: 1rem 1rem;
+    // margin: 0rem 1rem;
+    // width: calc(100% - 2rem);
+    background-color: unset;
+    margin-top: unset;
+    color: black;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.045);
+      color: black;
+      // box-shadow: 0px 0px 10px 0px rgba(black, 0.2);
+    }
+    &:focus {
+      background-color: red;
+    }
+    &:focus-within {
+      background-color: red;
+    }
+    &:focus-visible {
+      background-color: red;
+    }
+    &:active {
+      background-color: rgba(0, 0, 0, 0.125);
+    }
+    &:any-link {
+      background-color: red;
+    }
+    &:visited {
+      background-color: red;
+    }
+    &::selection {
+      background-color: red;
     }
   }
 }
