--- a/src/assets/inputs/ColorInput.module.scss
+++ b/src/assets/inputs/ColorInput.module.scss
@@ -41,30 +41,142 @@
 }
 
 .color-picker-container {
-  position: absolute;
+  // position: absolute;
+
   display: flex;
   flex-direction: column;
-  width: 90% !important;
-  // margin-left: 5%;
-  // top: 3.125rem;
+  width: 20rem !important;
   box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+  padding: 1rem 1rem;
+  row-gap: 1rem;
 
   > div:nth-child(1) {
-    display: flex;
-    width: 90% !important;
-
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, 1.5rem);
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
     > div {
-      border-radius: 0 !important;
+      box-shadow: 0px 0px 4px 0px rgba(black, 0.25);
     }
   }
-  > button:nth-child(2) {
-    margin-top: 0.5rem;
-    border: none;
-    border-radius: 2.5px;
+
+  // > button:nth-child(3) {
+  //   border: none;
+  //   border-radius: 2.5px;
+  //   @include Roboto-B15();
+  //   min-height: calc(3.125rem / 1.5);
+  //   max-height: calc(3.125rem / 1.5);
+  //   height: calc(3.125rem / 1.5);
+  //   width: 100%;
+  //   cursor: pointer;
+  //   margin-top: 1rem;
+  //   flex: 1;
+  // }
+}
+
+.modal {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000 !important;
+  font-family: 'Roboto';
+
+  // DIV modal
+  > div:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    z-index: calc(2000 + 1) !important;
+    // width: 50rem;
+    border-radius: 5px;
+  }
+
+  // DIV overlay
+  > div:nth-child(2) {
+    background-color: rgba(17, 24, 39, 0.9);
+    backdrop-filter: blur(5px);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+  }
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(black, 15%);
+  padding: 1rem 1rem;
+
+  > p {
     @include Roboto-B15();
-    justify-content: center;
-    width: 90% !important;
-    height: 3.125rem;
+    color: #201f1e;
+  }
+  > div:nth-child(2) {
+    border: none;
+    background-color: transparent;
+    font-weight: bolder;
+    color: #575350;
+    cursor: pointer;
+    width: min-content;
+  }
+}
+
+.modal-main {
+  display: flex;
+  flex-direction: column;
+  // width: 90%;
+  padding-left: 5%;
+  margin-top: 1.75rem;
+  column-gap: 1rem;
+  row-gap: 2rem;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: right;
+  margin-top: 3rem;
+  margin-right: 5%;
+  column-gap: 1.5rem;
+  margin-bottom: 1rem;
+  > button:nth-child(1) {
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    color: #605e5c;
     cursor: pointer;
   }
+  > button:nth-child(2) {
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    background-color: #3ebe8e;
+    border-radius: 5px;
+    color: white;
+    width: 100px;
+    height: 35px;
+    cursor: pointer;
+  }
+}
+
+.color-box {
+  cursor: pointer;
+  transition: 300ms;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
+.color-boxx-selected {
+  transition: 300ms;
+  border-radius: 20px;
 }
