--- a/src/assets/inputs/ImageInput.module.scss
+++ b/src/assets/inputs/ImageInput.module.scss
@@ -42,10 +42,28 @@
     }
   }
 }
+.container-file-input {
+  position: relative;
+  border-radius: 2.5px;
 
-.edit-image-small-button {
-  width: 100%;
-  height: 100%;
-  background-color: red;
-  position: absolute;
+  .edit-image-small-button {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(2px);
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    > button {
+      background-color: transparent;
+      border: none;
+      @include Roboto-B15();
+      color: white;
+      // box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.4);
+      padding: 1rem;
+      border-radius: 2.5px;
+    }
+  }
 }
