--- a/src/assets/inputs/Select.module.scss
+++ b/src/assets/inputs/Select.module.scss
@@ -17,36 +17,33 @@
     margin-bottom: 0.25rem;
   }
 }
+.select-container {
+  display: flex;
+  flex-direction: column;
+  .ry-label-input {
+    @include Roboto-B15;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 0.25rem;
+    color: var(--input-type-a-with-icon-color-1);
+  }
+}
 
-// .select {
-//   padding: 0rem 1rem;
-//   @include Roboto-R16();
-//   text-align: left;
-//   min-height: 3.125rem;
-//   height: 3.125rem;
-//   border: none;
-//   box-sizing: border-box;
-//   border-radius: 2.5px;
+.ry-root-input {
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s;
+}
 
-//   padding-left: 10px;
-//   border-top: none;
-//   border-right: none;
-//   border-left: none;
-
-//   option {
-//     // background-color: red;
-//     box-shadow: 0px 0px 0px 4px black;
-//     margin: 0.5rem 0.5rem;
-//   }
-
-//   &:focus-within {
-//     outline: none;
-//   }
-// }
+.ry-label-input {
+  padding: 0px;
+  margin: 0px;
+  @include Roboto-B15;
+  color: var(--input-type-a-without-icon-color-1);
+  margin-bottom: 0.25rem;
+}
 
 .select {
-  align-self: flex-end;
-
   // arrow
   &:hover {
     [class$='indicatorContainer'] {
@@ -65,6 +62,7 @@
     }
   }
   [class$='-control'] {
+    min-height: 3.125rem;
     border: none;
     background-color: var(--select-type-a-with-icon-color-1);
     border-bottom: 1px solid var(--select-type-a-with-icon-color-2);
